--- a/package.json
+++ b/package.json
@@ -37,5 +37,8 @@
 		"vite": "^5.0.3",
 		"vite-plugin-top-level-await": "^1.4.4",
 		"vite-plugin-wasm": "^3.3.0"
+	},
+	"dependencies": {
+		"@sveltejs/adapter-cloudflare": "^4.7.4"
 	}
 }
